<resources>
    <string name="app_name">P2P</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wifi_p2p_value_pending">Pending…</string>
    <string name="wifi_p2p_wifi_direct_label">Wifi Direct:</string>
    <string name="wifi_p2p_enabled_value">Enabled</string>
    <string name="wifi_p2p_disabled_value">Disabled</string>
    <string name="wifi_p2p_unexpected_state_value">Unexpected state: %d</string>
    <string name="wifi_p2p_discovery_label">Discovery:</string>
    <string name="wifi_p2p_discovery_started_value">Started</string>
    <string name="wifi_p2p_discovery_stopped_value">Stopped</string>
    <string name="wifi_p2p_my_device_name_label">My Device Name:</string>
    <string name="wifi_p2p_my_device_address_label">My Device Address:</string>
    <string name="wifi_p2p_peers_label">Peers:</string>
    <string name="wifi_p2p_device_name_label">Name:</string>
    <string name="wifi_p2p_device_address_label">Address:</string>
    <string name="wifi_p2p_group_owner">Group Owner:</string>
    <string name="wifi_p2p_group_formed">Group Formed:</string>
    <string name="wifi_p2p_value_no">No</string>
    <string name="wifi_p2p_value_yes">Yes</string>
    <string name="wifi_p2p_group_owner_address">Group Owner Address:</string>
    <string name="wifi_p2p_group_owner_value_na">N/A</string>
    <string name="wifi_p2p_connection_label">Connected to:</string>
    <string name="wifi_p2p_connection_failed_value">Failed: %s</string>
    <string name="device_to_device_sync">Device to device sync</string>
    <string name="device_to_device_sync_logo">Device to device sync logo</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="make_sure_both_devices_are_unlocked_close_together_and_have_wifi_turned_on">Make sure both devices are unlocked, close together and have wifi turned on</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="looking_for_nearby_devices_as">Looking for nearby devices as <strong>%1$s</strong></string>
    <string name="select_device_to_sync_with">Select device to sync with</string>
    <string name="pairing">Pairing</string>
    <string name="wifi_direct_name">Wifi-direct name</string>
    <string name="wifi_direct_name_setup_instructions"><![CDATA[Go to Wifi-Direct settings > Rename device and paste into the text box]]></string>
    <string name="share_data">Share Data</string>
    <string name="send_data">Send Data</string>
    <string name="start_sending_data">Start sending data</string>
    <string name="start_sending_data_to">Start sending data to %s</string>
    <string name="start_receiving_data">Start receiving data</string>
    <string name="waiting_for_transfer_to_start">Waiting for data transfer to start</string>
    <string name="connect_to_other_device_to_start_transfer">Connect to the other device using wifi-direct to start transfer</string>
    <string name="data_transfer_comlete">Data transfer complete</string>
    <string name="device_data_successfully_sent">Device data successfully sent</string>
    <string name="okay">OKay</string>
    <string name="sending">Sending...</string>
    <string name="receiving">Receiving...</string>
    <string name="sending_data_to">Sending data to %s</string>
    <string name="receiving_data_from">Receiving data from %s</string>
    <string name="cancel">Cancel</string>
    <string name="receiving_x_records">Receiving %1$d records</string>
    <string name="transferring_x_records">Transferring %1$d records</string>
    <string name="device_searching_failed">Device searching failed! Please try again</string>
    <string name="connecting_to_device_failed">Connecting to device failed! Please try again</string>
    <string name="tap_to_send_data_msg">Tap to start sending data to nearby device</string>
    <string name="receive_data">Receive Data</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="tap_to_receive_data_msg">Tap to start receiving data from nearby device</string>
    <string name="select_recipient_device">SELECT RECIPIENT DEVICE</string>
    <string name="pair">Pair</string>
    <string name="phone">Phone</string>
    <string name="decline">Decline</string>
    <string name="yes_exit">YES, EXIT</string>
    <string name="waiting_to_receive_data">Waiting to receive data</string>
    <string name="waiting_to_pair">Waiting to pair...</string>
    <string name="waiting_for_sender_to_initiate_data_sync">Waiting for sender to initiate data sync</string>
    <string name="searching_for_nearby_recipient">Searching for nearby recipient</string>
    <string name="searching_nearby_device_as">Searching nearby device as</string>
    <string name="waiting_to_pair_with_sender">Waiting to be paired with sender as</string>
    <string name="x_records_received"> %1$d records received successfully from %2$s </string>
    <string name="x_records_sent"> %1$d records sent successfully to %2$s </string>
    <string name="connection_break_title">Connection break!</string>
    <string name="connection_break_msg">Devices might get unpaired if you exit, any data sharing in progress will be cancelled</string>
    <string name="preparing_to_send_data_to">Preparing to send data to %1$s</string>
    <string name="waiting_for_sender_to_initiate_sync">Waiting for sender to initiate data sync</string>
    <string name="turn_on_wifi">Please turn on Wifi connection for P2P to work</string>
    <string name="searching_failed_dialog_title">Searching failed</string>
    <string name="searching_failed_dialog_msg">Sorry could not find devices to pair with</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="pairing_failed_msg">Sorry could not pair with device</string>
    <string name="receive_device_details_failed">Receiving device details failed</string>
    <string name="receive_device_details_failed_msg">Sorry could not receive device details</string>
    <string name="receiver_data_upto_date">Your data is up-to date</string>
    <string name="receiver_data_upto_date_msg">No new records to sync with your device</string>
    <string name="sender_data_upto_date">Receiver up-to date</string>
    <string name="sender_data_upto_date_msg">No new records to transfer, receiver data up-to date</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="device_disconnected_msg">Devices disconnected without completing the data transfer</string>
    <string name="an_error_occurred_restarting_the_p2p_screen">An error occurred! Restarting P2P screen</string>
    <string name="connection_was_disconnected">Connection was disconnected</string>
</resources>