...
import org.smartregister.p2p.search.ui.theme.DangerColor
import org.smartregister.p2p.search.ui.theme.DefaultColor
import org.smartregister.p2p.search.ui.theme.WhiteColor
import org.smartregister.p2p.utils.annotation.ExcludeFromJacocoGeneratedReport
import timber.log.Timber

const val P2P_BOTTOM_SHEET_LIST = "p2PBottomSheetList"
const val BOTTOM_SHEET_CANCEL_ICON_TEST_TAG = "bottomSheetCancelIconTestTag"
const val BOTTOM_SHEET_BUTTON_TEST_TAG = "bottomSheetButtonTestTag"

@SuppressLint("UnusedMaterialScaffoldPaddingParameter")
@OptIn(ExperimentalMaterialApi::class)
@Composable
fun BottomSheetScreen(
  p2PUiState: P2PUiState,
...
