...
import org.smartregister.p2p.model.ProgressIndicator
import org.smartregister.p2p.model.ProgressIndicatorState
import org.smartregister.p2p.search.ui.p2p.P2PUiState
import org.smartregister.p2p.search.ui.theme.DefaultColor
import org.smartregister.p2p.utils.annotation.ExcludeFromJacocoGeneratedReport

const val CIRCULAR_PROGRESS_INDICATOR_TEST_TAG = "circularProgressIndicatorTestTag"
const val PROGRESS_INDICATOR_ICON_TEST_TAG = "ProgressIndicatorIconTestTag"
const val PERCENTAGE_TEXT_TEST_TAG = "percentageTextTestTag"

@Composable
fun ProgressStatusIndicator(
  modifier: Modifier = Modifier,
...
